public/css/urbanTemple_main.css
/* common */

.container .pusher {
  background-image : url("/img/bg2.jpg") !important; 
  background-repeat: no-repeat !important;
  background-size:cover !important;
}

.container {
  background-image : url("/img/bg2.jpg") !important; 
  background-repeat: no-repeat !important;
  background-size:cover !important;
}

.with-fadeout {
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

/* login, signup */
.welcome-title {
  color: white;
  font-style: bold;
  font-size: 6em;
  opacity: 0.8;
}

.login-title {
  margin-left:30%;
  color: white;
  font-style: bold;
  font-size: 3em;
}

/*video#bgvid {
  display: inline;
  position: fixed;
  opacity: 0.8;
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  z-index: -100;
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  background-color: grey;
  background-size: cover;
}
*/
.login-form-item {
  margin-left: 30%;
  opacity: 0.8;
  padding: 4px 0;
  font-size: 1.5em;
}

#signupLink {
  color: rgb(219, 0, 0);
  text-decoration: underline;
  cursor: pointer;
}

/* main page */

#app-container {
  display: table;
  width: 100%;
}

/*#sidenav-region {
  display: table-cell;
  vertical-align: top;
  padding: 10px 5px;
  text-align: center;
  width: 170px;
}*/
.dashboard-layout {
  margin-left: 10%;
}

.menu-container {
  background-color: #d3d3d3;
}

#main-region {
  display: table-cell;
  /*background: white;*/
}

.logo-container img {
    width: 100%;
    height: 100%;
}

.logo-container {
  width: 100px;
  height: auto;
}

#main-region h1.level-header {
  background: #CCC4AC;
  color: white;
}

/* profile */
#profile-layout-header-container {
  padding-bottom: 20px;
}

.profile-layout-regions-container {
  display: table;
}

#rank-region {
  display: table-cell;
  width: 45%;
}

#feedback-region {
  /*padding-top: 50px;*/
  padding-left: 15px;
  display: table-cell;
}

.progress-bar {
  height: 20px;
  background: green;
  border-radius: 5px;
  /*border: 3px solid #00AC25;*/
}

/* dashboard ranks */
.profile-ranks-header-container {
  padding-bottom: 20px;
}

#rank-region .ranks-view .ranks-container .rank {
  width: 110px;
  text-align: center;
}

#rank-region .ranks-view .ranks-container .rank .rank-color {
  width: 110px;
  height: 50px;
}


/* dashboard feedbacks */
.user-feedbacks-header-container {
  padding-bottom: 20px;
}


/* dashboard current levels */

.dashboard-level {

}

#current-level-video-header {
  padding-top: 20px;
  color: black;
  font-size:2em;
}


/* training center */

#kendo-region {
  margin-top: 20px;
}

.training-container .thumbnail-container {
  width: 290px;
  height: 163px;
}

.training-container .img-container {
  display: inline;
  position: absolute;
  overflow: hidden;
  z-index: 15;
}

.training-container video {
  display: inline;
  position: absolute;
  overflow: hidden;
  z-index: 10;
  width: 290px;
  height: 163px;
}

.thumbnail-hidden {
  /*display: none!important;*/
  opacity: 0;
}

.class-thumb.disabled {
  opacity: 0.5;
}


/* class page */

.class-description {
  max-width: 85%;
}

.class-image {
  padding: 0 30px 0 0; 
}

#class-page-main {
  margin-top: 30px;
  width: 80%;
}

.class-level-list {
  width: 80%;
}

.class-instructor {
  margin: 10px 0 20px 0;
}

#class-title {
  margin: 20px 0 20px 0;
}


/* level */

.level-pagination {
  margin: 0 auto;
  text-align: center;
}

.submitVideoUrl {
  width: 300px;
  height: 50px;
}

.level-title {
  margin: 40px 0;
}

/* login and signup */

.column.login-view-container {
  margin-top: 100px;
  width: 350px;
}

#register_form {
  position: relative;
  max-width: 45%;
  margin: 0 auto;
  margin-right: 430px;
  margin-top: 100px;
}

.shorted-signin-input {
  width:50%;
}

.signin-submit-button {
  margin: 0 auto;
  text-align: center;
}

